commented initial card

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       </form>
     </div>
     <div class="content">
-      <div class="card">
+      <!-- <div class="card">
         <h3>São José do Campos<span>BR</span></h3>
         <span class="delete">X</span>
         <h2>28<span>ºC</span></h2>
         <img src="imgs/1.png" alt="weather-icon" />
         <p>SUNNY</p>
-      </div>
+      </div> -->
     </div>
     <script src="script.js"></script>
   </body>
