--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="content">
       <!-- <div class="card">
-        <h3>São José do Campos<span>BR</span></h3>
+        <h3>Cidade<span>BR</span></h3>
         <span class="delete">X</span>
         <h2>28<span>ºC</span></h2>
         <img src="imgs/1.png" alt="weather-icon" />
